...
import os.log

class ImageCacheDebugViewController: UITableViewController {

    private let titles = [
        Sections.fireproof: "Fireproof (Fireproof Cache)",
        Sections.tabs: "Tabs (Tabs Cache)"
    ]

    private enum Sections: Int, CaseIterable {
        case fireproof
        case tabs
    }
...
