...
                        <outlet property="error" destination="Kd4-Oi-JP2" id="zBn-cG-pfQ"/>
                        <outlet property="errorHeader" destination="6P7-7R-riV" id="IkB-Tc-Eat"/>
                        <outlet property="errorInfoImage" destination="TUO-E3-s7Q" id="ngN-8S-PwR"/>
                        <outlet property="errorMessage" destination="Cjw-mk-QL3" id="b1N-1W-IGs"/>
                        <outlet property="showBarsTapGestureRecogniser" destination="Y72-bH-DMy" id="SAY-KX-OEJ"/>
                        <outlet property="webViewContainer" destination="3yc-Gh-Vqe" id="kNL-fm-49U"/>
                        <segue destination="5Os-y0-IaV" kind="popoverPresentation" identifier="PrivacyDashboard" destinationCreationSelector="makePrivacyDashboardViewControllerWithCoder:" popoverAnchorView="ypz-s2-KJB" id="nKl-8K-k03">
                            <popoverArrowDirection key="popoverArrowDirection" up="YES"/>
                        </segue>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Xy9-lL-XjG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <tapGestureRecognizer id="Y72-bH-DMy">
...
