...
        externalSchemeButton.sendAction(on: .leftMouseDown)
        // externalSchemeButton.accessibilityTitle is set in `updatePermissionButtons`
        externalSchemeButton.setAccessibilityIdentifier("AddressBarButtonsViewController.externalSchemeButton")

        privacyDashboardButton.setAccessibilityRole(.button)
        privacyDashboardButton.setAccessibilityElement(true)
        privacyDashboardButton.setAccessibilityIdentifier("AddressBarButtonsViewController.privacyDashboardButton")
        privacyDashboardButton.setAccessibilityTitle(UserText.privacyDashboardButton)
        privacyDashboardButton.toolTip = UserText.privacyDashboardTooltip

        bookmarkButton.sendAction(on: .leftMouseDown)
        bookmarkButton.normalTintColor = visualStyle.colorsProvider.iconsColor
        bookmarkButton.setAccessibilityIdentifier("AddressBarButtonsViewController.bookmarkButton")
...
