...
"settings.cookie.pop.up.protection.explanation" = "DuckDuckGo will try to select the most private settings available and hide these pop-ups for you.\n[Learn More](ddgQuickLink://duckduckgo.com/duckduckgo-help-pages/privacy/web-tracking-protections/#cookie-pop-up-management)";

/* Settings screen cell text for Cookie popups */
"settings.cookie.popups" = "Manage Cookie Pop-ups";

/* Settings title for the customize section */
"settings.customize" = "Customize";

/* The name of a settings subsection related to the data clearing */
"settings.data.clearing" = "Data Clearing";

/* The name of Settings category in Privacy Features related to configuration of the default browser */
"settings.default.browser" = "Default Browser";
...
